src/styles/searchbox.css
/* SearchBox */
/* Group 87    */

/* Make search input full length: 100% */
.search-box {
  /* position: absolute; */
  width: 100%;

  /* margin-left: 6em; */
}

/* Search Opinions: */

.search-title {
  /* Subhead */

  /* margin-left: 7em; */
  /* identical to box height */

  letter-spacing: 0.004em;

  color: #000000;
}

/* Search */
.search-input {
  height: 2.8em;
  /* left: 7em; */
  width: 70%;

  /* True Black */

  border: 1px solid #000000;
  box-sizing: border-box;
  border-radius: 4px;
}

.search-box-i {
  position: relative;
  /* z-index: 1; */
  top: -0.5em;
  left: 4.5em;
  /* top: 1px; */
  /* color: #7b7b7b; */
  color: #000000;
  cursor: pointer;
  width: 0;
}

.save-search {
  /* position: static;
  width: 178px;
  height: 16px;
  left: 17px;
  top: 0px; */
  text-align: right;

  /* Link */

  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  /* text-align: center; */
  text-decoration-line: underline;

  /* Dark Gray */

  color: #676767;

  /* Inside Auto Layout */

  flex: none;
  order: 1;
  flex-grow: 0;
  margin: 5px 0px;
}

